# dint

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  SIMD_test.cpp  VarIntG8IU.h  binary_blocks_collection.hpp  binary_collection.hpp  binary_freq_collection.hpp  block_codecs.hpp  block_freq_index.hpp  block_statistics.hpp  block_stats.hpp  blocks_statistics.hpp  check_encoded_data.cpp  check_index.cpp  codecs.hpp  compact_dictionary.hpp  compress_integer_qmx_improved.cpp  compress_integer_qmx_improved.h  create_dint_dict.cpp  create_freq_index.cpp  decode.cpp  decoding_speed_perf_test.cpp  dict_freq_index.hpp  dict_perf_test.cpp  dict_posting_list.hpp  dictionary.hpp  dictionary_builders.hpp  dictionary_building_utils.hpp  dictionary_overlapped.hpp  dictionary_packed.hpp  dictionary_rectangular.hpp  dictionary_strategy.hpp  dictionary_types.hpp  dint_codecs.hpp  dint_configuration.hpp  encode.cpp  freq_index.hpp  (+25 more)
include/: binary_blocks_collection.hpp  dictionary_builders.hpp  dictionary_building_utils.hpp  dictionary_types.hpp  dint_codecs.hpp  dint_configuration.hpp  index_types.hpp  multi_dictionary.hpp  parallel_executor.hpp  positive_sequence.hpp  qmx.hpp  statistics_collectors.hpp  util.hpp
include/dint/: block_statistics.hpp  dict_freq_index.hpp  dict_posting_list.hpp  dictionary_builders.hpp  dictionary_building_utils.hpp  dictionary_types.hpp  dint_codecs.hpp  dint_configuration.hpp  hash_utils.hpp  multi_dictionary.hpp  rectangular_dictionary.hpp  single_dictionary.hpp  statistics_collectors.hpp
include/ds2i/: LICENSE  binary_collection.hpp  block_codecs.hpp  freq_index.hpp  index_build_utils.hpp  queries.hpp  verify_collection.hpp  wand_data.hpp
scripts/: build.py  build_and_query.py  build_dint_indexes.py  build_indexes_on_raksaka.sh  build_other_indexes.py  collect_timings.py  query.py  stat_all.py  test_all.py
src/: CMakeLists.txt  check_index.cpp  create_freq_index.cpp  create_wand_data.cpp  dict_perf_test.cpp  pair_wise_intersect.cpp  queries.cpp
test/: test_block_codecs.cpp  test_block_freq_index.cpp  test_block_posting_list.cpp  test_ranked_queries.cpp
vroom_env/: CMakeLists.txt  check_encoded_data.cpp  codecs.hpp  decode.cpp  dint_codecs.hpp  encode.cpp  jobs.hpp  statistics.hpp
